<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">朋友帮</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 侧边栏按钮 -->
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>

    <!-- 侧边栏菜单 -->
    <string name="menuHome">首页</string>
    <string name="menuGood">学习中心</string>
    <string name="menuNews">个人中心</string>
    <string name="menuStudio">论太天地</string>
    <string name="menuBlog">其他</string>

    <!-- 终端店侧边栏菜单 -->
    <string name="pyb_menuHome">主页</string>
    <string name="pyb_myInvitation">我的邀请码</string>
    <string name="pyb_alterpassword">修改密码</string>
    <string name="pyb_sysnotification">系统通知</string>
    <string name="pyb_about">关于我们</string>
    <string name="pyb_quit">退出登录</string>

    <!-- 分销商侧边栏菜单 -->
    <string name="dis_menuHome">主页</string>
    <string name="dis_menutmlsmg">分销商管理</string>
    <string name="dis_menuCount">统计</string>
    <string name="dis_menuSet">设置</string>

    <!-- 品牌商侧边栏菜单 -->
    <string name="brand_menuHome">主页</string>
    <string name="brand_menuDissc">经销商销量统计</string>
    <string name="brand_menuSkusc">SKU销量统计</string>
    <string name="brand_menuCanalsc">渠道销量统计</string>
    <string name="brand_menuNewneed">最新需求</string>
    <string name="brand_menuNewadv">最新投诉建议</string>
    <string name="brand_menuSet">设置</string>
    <string name="press_again_exit">再按一次退出</string>

    <!-- 首页中的文字 -->
    <string name="home_questionnaire">问卷</string>
    <string name="home_more">更多问卷</string>
    <string name="home">首頁</string>
    <!-- 首页中問卷 title -->
    <string name="question_title">教育调查</string>
    <string name="question_date">发布：2015-05-12</string>
    <string name="question_aword">獎勵：0.5元</string>
    <string name="question_deadline">截止：不限</string>
    <string name="question_Quota">限額：不限</string>
    <string name="question_limit">不限</string>
    <string name="question_total">共10题</string>
    <string name="question_des">歡迎使用調查問卷</string>
    <string name="question_descont">你好，欢迎你使用xxx！xxx致力于为广大客户提供最优质的调研服务，热烈欢迎你加入到我们的行列中来，用你的看法和观点去改变世界，请认真回答下面的问卷哦！回答约认真奖励越高哦</string>
    <string name="question_start">开始答卷</string>
    <string name="question_summary">問卷簡介</string>
    <string name="question_more">更多</string>
    <string name="question_content_next">下一题</string>
    <string name="question_content_commit">提交</string>

    <!-- MJ -->
    <string name="fragment_myaccount_mymoney">我的交易币</string>
    <string name="fragment_myaccount_button_exchange">立即兑换</string>
    <string name="fragment_myaccount_exchange_record">账户记录</string>
    <string name="fragment_accumulated_shopping_button_exchange">兑换奖品</string>
    <string name="fragment_accumulated_shopping_button_mymoney">我的兑换币</string>
    <string name="fragment_accumulated_shopping_button_mygoods">我的奖品</string>
    <!-- xlist config -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出</string>

</resources>