<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/question_item_height"
        android:layout_margin="@dimen/question_margin"
        android:background="@color/grey" >

        <TextView
            android:id="@+id/question_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/question_date"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_deadline" />

        <TextView
            android:id="@+id/question_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_limit" />

        <TextView
            android:id="@+id/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_title"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/question_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_title"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_date" />

        <TextView
            android:id="@+id/question_Quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/question_iv"
            android:layout_alignBaseline="@id/question_deadline"
            android:layout_alignRight="@+id/question_limit"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_Quota" />

        <TextView
            android:id="@+id/question_aword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/question_Quota"
            android:layout_alignBaseline="@id/question_date"
            android:layout_alignRight="@+id/question_limit"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_aword"
            android:textColor="@color/question_aword" />

        <ImageView
            android:id="@+id/question_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_iv"
            android:layout_above="@+id/question_limit"
            android:layout_alignParentLeft="true"
            android:background="@color/question_iv" />

        <TextView
            android:id="@+id/question_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/question_title"
            android:layout_alignBottom="@+id/question_title"
            android:layout_alignRight="@+id/question_aword"
            android:layout_margin="@dimen/question_margin"
            android:text="@string/question_more"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/question_cover_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/question_item_height"
        android:alpha="0.5"
        android:background="@color/question_cover_color"
        android:visibility="gone" />

</FrameLayout>